--- a/style/mobile.css
+++ b/style/mobile.css
@@ -140,8 +140,29 @@ footer {
     cursor: pointer;
 }
 
+.movie-container--loading {
+    background-color: var(--purple-light-2);
+    border-radius: 8px;
+    height: 225px;
+    min-height: 225px;
+    max-height: 225px;
+    width: 150px;
+    max-width: 150px;
+    min-width: 150px;
+    margin-bottom: 15px;
+    animation: loading-skeleton infinite 1.5s;
+}
+
+.movie-container--loading:nth-child(2){
+    animation-delay: .2s;
+}
+.movie-container--loading:nth-child(3){
+    animation-delay: .4s;
+}
+
 .movie-img {
     border-radius: 8px;
+    min-height: 175px;
 }
 
 .categoriesPreview-list,
@@ -153,6 +174,23 @@ footer {
     flex-wrap: wrap;
 }
 
+
+.category-container--loading {
+    background-color: var(--purple-light-2);
+    border-radius: 8px;
+    height: 25px;
+    min-height: 25px;
+    max-height: 25px;
+    width: 150px;
+    max-width: 150px;
+    min-width: 150px;
+    margin-bottom: 15px;
+    animation: loading-skeleton infinite 1.5s;
+}
+
+.movie-container--loading:nth-child(2){
+    animation-delay: .2s;
+}
 
 /* Header */
 .header-container {
@@ -453,3 +491,16 @@ footer {
 .inactive {
     display: none;
 }
+
+/* Animation */
+
+@keyframes loading-skeleton {
+    0% , 100%
+    {
+        opacity: 100%;
+    }
+    50% {
+        opacity: 0%;
+    }
+}
+
